test/cases/compile_errors/write_to_const_global_variable.zig
const x: i32 = 99;
fn f() void {
    x = 1;
}
export fn entry() void {
    f();
}

// error
// backend=stage2
// target=native
//
// :3:5: error: cannot assign to constant
